ci: CodeDeploy 중 Spring REST Docs 문서 누락

--- a/build.gradle
+++ b/build.gradle
@@ -64,11 +64,10 @@ asciidoctor.doFirst {
 
 tasks.register('copyDocument', Copy) {
 	dependsOn asciidoctor
-
-	from "${asciidoctor.outputDir}"
-	into file("src/main/resources/static/docs")
+	from file("${asciidoctor.outputDir}")
+	into file("build/resources/main/static")
 }
 
-build {
+bootJar {
 	dependsOn copyDocument
 }
