ci: CodeDeploy 중 Spring REST Docs 문서 누락 (Task 순서 변경)
> Task :compileJava
> Task :processResources
> Task :classes
> Task
:compileTestJava
> Task :processTestResources NO-SOURCE
> Task
:testClasses

> Task :test
2023-09-03 22:59:05.789  INFO 10088 ---
[ionShutdownHook] j.LocalContainerEntityManagerFactoryBean : Closing JPA
EntityManagerFactory for persistence unit 'default'
2023-09-03
22:59:05.791  INFO 10088 --- [ionShutdownHook]
com.zaxxer.hikari.HikariDataSource       : HikariPool-1 - Shutdown
initiated...
2023-09-03 22:59:05.795  INFO 10088 --- [ionShutdownHook]
com.zaxxer.hikari.HikariDataSource       : HikariPool-1 - Shutdown
completed.

> Task :asciidoctor
> Task :copyDocument
> Task
:bootJarMainClassName
> Task :bootJar
> Task :jar
> Task :assemble
>
Task :check
> Task :build

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
+asciidoctor {
 	configurations 'asciidoctorExtensions'
 	baseDirFollowsSourceFile()
 	inputs.dir snippetsDir
@@ -64,10 +64,14 @@ asciidoctor.doFirst {
 
 tasks.register('copyDocument', Copy) {
 	dependsOn asciidoctor
-	from file("${asciidoctor.outputDir}")
+	from "${asciidoctor.outputDir}"
 	into file("build/resources/main/static")
 }
 
-bootJar {
-	dependsOn copyDocument
+jar {
+	dependsOn 'copyDocument'
+}
+
+bootJarMainClassName {
+	dependsOn 'copyDocument'
 }
