ci: application.yml 설정을 운영, 개발로 분리 및 MariaDB 활성화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,3 @@
-# hibernate settings
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
-
-#logging
-logging:
-  level:
-    asc:
-      portfolio:
-        ascSb: debug
+  profiles:
+    active: dev
