--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	compileOnly 'org.projectlombok:lombok'
-//	runtimeOnly 'org.postgresql:postgresql'
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
