--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,6 +14,16 @@ jobs:
   build:
     runs-on: ubuntu-22.04
 
+    services:
+      mariadb:
+        image: mariadb:10.2
+        env:
+          MYSQL_ROOT_PASSWORD: 1234
+          MYSQL_DATABASE: testdb
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
